[tool.poetry]
name = "dlt"
version = "0.1.0"
description = ""
authors = ["Kasai Kou"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
numpy = "^1.24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
